# pyopenehr-am

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PACK_INDEX.md  README.md  SECURITY.md  SPEC_BASELINE.md  openehr_am_prompt_list_expanded.md  openehr_am_resources.md  openehr_am_toolkit_todo_checklist.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md  openehr_am_prompt_list.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  other.yml
.github/agents/: openehr-am-bmm.agent.md  openehr-am-builder.agent.md  openehr-am-cli.agent.md  openehr-am-opt.agent.md  openehr-am-parsers.agent.md  openehr-am-release.agent.md  openehr-am-validation.agent.md
.github/instructions/: bmm.instructions.md  cli.instructions.md  docs.instructions.md  generated.instructions.md  openehr_am.instructions.md  opt.instructions.md  parsing.instructions.md  security.instructions.md  tests.instructions.md  typing.instructions.md  validation.instructions.md
.github/workflows/: ci.yml  release-package-check.yml
demo_repo/: demo.archetype.adl  demo.opt.json  demo.template.adl  wanted.adl
docs/: ARCHITECTURE_MAP.md  MAINTENANCE_AUDIT.md  README.md  SOURCE_CITATION_STYLE.md  architecture.md  compatibility.md  glossary.md  issue-codes.md  opt_compilation.md  quickstart.md  releasing.md  roadmap.md  security.md  validation-rule-template.md  validation_levels.md
docs/archive/: PACK_INDEX.md  README.md
docs/decisions/: 0001-python-314-baseline.md
docs/dev/: README.md  ci.md  parsers.md
grammars/: README.md
grammars/path/: OpenEHRPath.g4
openehr_am/: AGENTS.md  __about__.py  __init__.py
openehr_am/_generated/: AqlLexer.py  AqlParser.py  AqlParserListener.py  AqlParserVisitor.py  OpenEHRPath.interp  OpenEHRPath.tokens  OpenEHRPathLexer.interp  OpenEHRPathLexer.py  OpenEHRPathListener.py  OpenEHRPathParser.py  OpenEHRPathVisitor.py  README.md  __init__.py
openehr_am/adl/: __init__.py  ast.py  cadl_ast.py  expr_ast.py  expr_parser.py  parser.py
openehr_am/antlr/: __init__.py  runtime.py  span.py
openehr_am/aom/: __init__.py  archetype.py  builder.py  constraints.py  debug_dict.py  ids.py  repository.py  terminology.py
openehr_am/aql/: __init__.py  parser.py
openehr_am/bmm/: __init__.py  loader.py  model.py  repository.py
openehr_am/cli/: __init__.py  app.py  main.py  render.py
openehr_am/odin/: __init__.py  ast.py  emit.py  parser.py  transformer.py
openehr_am/opt/: __init__.py  compiler.py  debug_dict.py  dependencies.py  flattening.py  json.py  model.py
openehr_am/path/: __init__.py  ast.py  parser.py  resolver.py
openehr_am/validation/: __init__.py  context.py  issue.py  issue_collector.py  opt.py  opt_checks.py  registry.py  rm.py  rm_checks.py  semantic.py  semantic_checks.py  syntax.py
resources/: README.md
resources/openehr/: README.md
scripts/: generate_parsers.py
tests/: fixture_loader.py  repo_root.py  test_adl_ast.py  test_adl_expr_ast.py  test_adl_parser.py  test_aom_builder.py  test_aom_models.py  test_aom_to_dict.py  test_cadl_ast.py  test_cli_render.py  test_generated_sanity.py  test_imports.py  test_issue.py  test_issue_codes.py  test_issue_collector.py  test_no_future_annotations.py  test_odin_ast.py  test_odin_parser.py  test_odin_roundtrip.py  test_odin_transformer.py  test_public_api_flow.py  test_validate_semantic.py  test_validate_syntax.py
tests/adl/: test_adl_ast.py  test_adl_expr_parser.py  test_adl_parser.py  test_cadl_ast.py
tests/antlr/: test_antlr_runtime.py
tests/aom/: test_aom_archetype_repository.py  test_aom_builder.py  test_aom_ids.py  test_aom_models.py  test_aom_to_dict.py
tests/aql/: test_aql_syntax.py
tests/bmm/: test_bmm_dataclasses.py  test_bmm_loader.py  test_bmm_repository.py
tests/cli/: test_cli_commands.py
tests/corpus/: bad_missing_id.adl  bad_unterminated_string.odin  ok_minimal_archetype.adl  ok_minimal_template.adl  ok_tiny.odin  test_corpus_runner.py
tests/fuzz/: test_no_crash.py
tests/meta/: test_generated_sanity.py  test_issue_codes.py  test_issue_snapshot.py  test_no_future_annotations.py
tests/odin/: test_odin_parser.py
tests/opt/: test_opt_compile_opt.py  test_opt_dependencies.py  test_opt_model.py
tests/path/: test_path_parser.py  test_path_resolver.py
tests/support/: issue_snapshot.py
tests/validation/: test_validate_opt.py  test_validate_rm.py  test_validation_registry.py
(+9 files in other folders)
